# WeatherBot

./: .gitignore  app.py  config.py  loader.py  pyproject.toml
docs/: technical_requirements.md
handlers/: __init__.py  interactions.py  weather.py
utils/: set_bot_commands.py  state.py
utils/misc/: logger.py
