[tool.poetry]
name = "weather-bot"
version = "0.1.0"
description = "your private weather bot to know weather anywhere"
authors = ["Steio Dev <hello@steio.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
aiogram = "^2.19"
coloredlogs = "^15.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
